Created feed with posts

--- a/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/layout.css
+++ b/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/layout.css
@@ -17,6 +17,7 @@
     border-bottom-width: 1px;
     border-color: rgba(0,0,0,.1);
     height: 70px;
+    transition: background-color 0.3s ease;
 }
 
 .navbar {
