--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
     <link href="~/css/chat-box.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/Insightify.MVC.styles.css" asp-append-version="true" />
     <link href="~/css/crypto.css" rel="stylesheet" />
+    <link href="~/css/feed.css" rel="stylesheet" />
 </head>
 <body>
     <div class="navbar" id="navbar">
@@ -109,228 +110,17 @@
             <div class="message-begining d-flex align-items-center justify-content-center">
                 <p>This is the begining of your conversation!</p>
             </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 1</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 1</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 2</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 2</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 3</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 3</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 4</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 4</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 5</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 5</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 6</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 6</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 7</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 7</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 8</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 8</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 9</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 9</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 10</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 10</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 11</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 11</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 12</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 12</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 13</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 13</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 14</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 14</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 15</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 15</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 16</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 16</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 17</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 17</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 18</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 18</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 19</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 19</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 2</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 2</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 3</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 3</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 4</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 4</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 5</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 5</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 6</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 6</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 7</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 7</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 8</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 8</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 9</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 9</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 10</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 10</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 11</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 11</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 12</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 12</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 13</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 13</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 14</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 14</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 15</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 15</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 16</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 16</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 17</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 17</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 18</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 18</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-end justify-content-end">
-                <p class="chat-message-content message-owner">Hello I am David! 19</p>
-            </div>
-            <div class="chat-message-element d-flex align-items-start justify-content-start">
-                <p class="chat-message-content">Hello I am David too! 19</p>
-            </div>
+            @{
+                for (int i = 0; i < 40; i++)
+                {
+                    <div class="chat-message-element d-flex align-items-end justify-content-end">
+                        <p class="chat-message-content message-owner">Hello I am David! @i</p>
+                    </div>
+                    <div class="chat-message-element d-flex align-items-start justify-content-start">
+                        <p class="chat-message-content">Hello I am David too! @i</p>
+                    </div>
+                }
+            }
         </div>
         <footer class="chat-box-footer">
             <div class="chat-box-container">
@@ -339,7 +129,7 @@
         </footer>
     </div>
     <div class="page" id="page">
-        <header class="header d-flex justify-content-between align-items-center">
+        <header id="header" class="header d-flex justify-content-between align-items-center">
             <div class="circle-bg" style="background-color: transparent; margin:0; width:60px;">
                 <div class="circle-bg" id="navbar-show">
                     <a href="#" class="navbar-brand"><i class="fa fa-bars"></i></a>
@@ -401,6 +191,33 @@
             </main>
         </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $(window).scroll(function() {
+                var scroll = $(window).scrollTop();
+                var header = $('#header');
+                var initialColor = '#ececec';
+                var darkerColor = '#ffffff';
+
+                if (scroll > 50) {
+                    var ratio = (scroll - 50) / 150;
+                    var newColor = blendColors(initialColor, darkerColor, ratio);
+                    header.css('background-color', newColor);
+                } else {
+                    header.css('background-color', initialColor);
+                }
+            });
+
+            function blendColors(color1, color2, ratio) {
+                ratio = Math.min(1, Math.max(0, ratio));
+                var r = Math.round(parseInt(color1.substring(1, 3), 16) * (1 - ratio) + parseInt(color2.substring(1, 3), 16) * ratio);
+                var g = Math.round(parseInt(color1.substring(3, 5), 16) * (1 - ratio) + parseInt(color2.substring(3, 5), 16) * ratio);
+                var b = Math.round(parseInt(color1.substring(5, 7), 16) * (1 - ratio) + parseInt(color2.substring(5, 7), 16) * ratio);
+                return '#' + r.toString(16) + g.toString(16) + b.toString(16);
+            }
+        });
+    </script>
     <script>
         var main = document.getElementById('main');
 
