--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Home/Feed.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Home/Feed.cshtml
@@ -63,7 +63,7 @@
                     for (int i = 0; i < 6; i++)
                     {
                         <div class="account-element">
-                            <img class="account-footer-img" src="~/images/navbar/kur.jpg" />
+                            <img class="account-footer-img" src="~/images/navbar/squid.jpg" />
                             <div class="image-element-content">
                                 <h1 class="image-element-content-title">r/Twitch</h1>
                                 <h2 class="image-element-content-content">1,209,283 followers</h2>
