--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Home/News.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Home/News.cshtml
@@ -16,7 +16,7 @@
                             </div>
                         </div>
                         <div>
-                            <img class="news-image" src="~/images/navbar/patrik.png" />
+                            <img class="news-image" src="~/images/camera_lense_0.jpeg" />
                        </div>
                     </div>
                     <div class="news-under-post-line"></div>
@@ -25,12 +25,14 @@
         </section>
         <section class="section-news">
             <div class="side-news-container">
-                <h1 class="news-title">Popular voices</h1>
+                <div class="d-flex align-items-start" style="width: 90%;">
+                    <h1 class="news-title">Popular voices</h1>
+                </div>
                 @{
                     for (int i = 0; i < 6; i++)
                     {
                         <div class="news-element">
-                            <img class="news-footer-img" src="~/images/navbar/kur.jpg" />
+                            <img class="news-footer-img" src="~/images/navbar/squid.jpg" />
                             <div class="news-image-element-content">
                                 <h1 class="news-image-element-content-title">Microsoft</h1>
                                 <h2 class="news-image-element-content-content">1,209,283 followers</h2>
