--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_Layout.cshtml
@@ -136,6 +136,7 @@
                     <a href="#" class="navbar-brand"><i class="fa fa-bars"></i></a>
                 </div>
             </div>
+            <h1 class="header-page-title">Dashboard</h1>
             <div class="d-flex justify-content-between align-items-center">
                 <div class="circle-bg">
                     <a href="#" class="navbar-brand" id="notifications-btn"><i class="fa fa-bell"></i></a>
