--- a/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/news.css
+++ b/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/news.css
@@ -10,92 +10,114 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: start;
     width: 100%;
-    margin: 20px;
+    padding: 20px;
+    transition: all 0.3s;
+}
+.news-container-single:hover{
+    background-color: rgb(248, 247, 247);
+    border-radius: 20px;
+    cursor: pointer;
 }
 
 .news-sections-container {
     width: 100%;
     display: flex;
-    justify-content: start;
+    justify-content: center;
     align-items: start;
     flex-direction: row;
 }
 
 .news-section-posts {
-    width: 70%;
+    margin: 10px;
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .news-container .news-main {
     display: flex;
     flex-direction: column;
     align-items: start;
-    margin-bottom: 20px;
 }
 
 .news-container .news-header-hour {
     display: flex;
     flex-direction: row;
-    text-align: center;
 }
 
 .news-container .news-headerhour-title {
     font-size: 1.1em;
-    margin-right: 5px;
-    text-align: center;
+    display: flex;
+    align-items: center;
 }
 
 .news-container .news-headerhour-text {
     font-size: 1.1em;
     color: #808080;
+    display: flex;
+    align-items: center;
 }
 
 strong{
     font-size: 1.1em;
-}
-
-.news-container .news-content {
-    text-align: center;
+    margin: 5px;
 }
 
 .news-container .news-content-title {
     font-size: 1.2em;
-    font-weight: bold;
+    max-width: 400px;
+    margin-bottom: 0;
 }
 
 .news-container .news-image {
-    width: 100%;
-    max-width: 100px;
+    max-width: 150px;
+    border-radius: 10px;
     height: auto;
 }
 
 .news-under-post-line {
     width: 100%;
     height: 1px;
-    background-color: #808080;
-    margin-bottom: 20px;
+    background-color: #dddddd;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .section-news {
     width: 30%;
+    margin: 10px;
 }
 
 .side-news-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 400px;
+    border: 1px solid #dddddd;
+    border-radius: 20px;
+    padding: 20px;
 }
 
 .news-title {
-    font-size: 1.5em;
-    margin-bottom: 20px;
+    font-size: 25px;
+    font-weight: bold;
 }
 
 .news-element {
+    margin-top: 20px;
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
+    width: 90%;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #dddddd;
+}
+.news-element:last-of-type{
+    padding-bottom: 0;
+    border-bottom: none;
 }
 
 .news-footer-img {
@@ -108,8 +130,8 @@ strong{
 .news-image-element-content {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: start;
+    justify-content: start;
 }
 
 .news-image-element-content-title {
@@ -119,4 +141,21 @@ strong{
 
 .news-image-element-content-content {
     color: #808080;
+    font-size: 15px;
+}
+
+@media(max-width:1400px){
+    .news-sections-container{
+        flex-direction: column-reverse;
+    }
+    .section-news{
+        width: 90%;
+    }
+    .side-news-container{
+        width: 100%;
+        max-width: none;
+    }
+    .news-section-posts{
+        width: 90%;
+    }
 }
