--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                     </a>
                 </div>
                 <div class="nav-item px-1 hover">
-                    <a class="nav-link fs-6 px-2" asp-action="Feed" asp-controller="Home">
+                    <a class="nav-link fs-6 px-2" asp-action="Feed" asp-controller="Posts">
                         <span class="oi fa-solid fa-chart-simple" aria-hidden="true"></span> Feed
                     </a>
                 </div>
