--- a/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/feed.css
+++ b/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/feed.css
@@ -32,11 +32,13 @@
                 border-radius: 30px;
                 transition: all 0.3s;
                 padding: 30px;
+                border-bottom: 1px solid #dddddd;
             }
 
                 .posts-container .sections-container .section-posts .post-container:hover {
                     background-color: rgb(248, 247, 247);
                     cursor: pointer;
+                    border-bottom: 1px solid rgb(248, 247, 247);
                 }
 
                 .posts-container .sections-container .section-posts .post-container .post-header {
