--- a/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/news.css
+++ b/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/news.css
@@ -14,11 +14,14 @@
     width: 100%;
     padding: 20px;
     transition: all 0.3s;
+    border-radius: 20px;
+    border-bottom: 1px solid #dddddd;
+    margin-bottom: 10px;
 }
 .news-container-single:hover{
     background-color: rgb(248, 247, 247);
-    border-radius: 20px;
     cursor: pointer;
+    border-bottom: 1px solid rgb(248, 247, 247);
 }
 
 .news-sections-container {
@@ -77,14 +80,6 @@ strong{
     max-width: 150px;
     border-radius: 10px;
     height: auto;
-}
-
-.news-under-post-line {
-    width: 100%;
-    height: 1px;
-    background-color: #dddddd;
-    margin-top: 5px;
-    margin-bottom: 5px;
 }
 
 .section-news {
