hooked the news and created a 'create' for the posts

--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Posts/Create.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Posts/Create.cshtml
@@ -1,5 +1,134 @@
-﻿<form asp-action="" asp-controller="">
-    <input type="text" placeholder="Title" asp-for="" />
-    <input type="text" placeholder="Description" asp-for="" />
-    <input type="text" placeholder="ImageUrl" asp-for="" />
-</form>
+﻿<div class="cerate-post-container">
+    <section class="create-post-section">
+        <div class="create-post-title-container">
+            <h1>Create a post</h1>
+        </div>
+        <div class="post-content-container">
+            <div class="post-content-navigation-top">
+                <a class="naligation-item" id="btn-post">
+                    <i class="navigation-item-icon fa fa-list-ul"></i> Post
+                </a>
+                <a class="naligation-item" id="btn-image">
+                    <i class="navigation-item-icon fa fa-image"></i> Image
+                </a>
+                <a class="naligation-item" id="btn-preview">
+                    <i class="navigation-item-icon fa fa-magnifying-glass"></i> Preview
+                </a>
+            </div>
+            <div class="post-content" id="text-content">
+                <input id="postTitle" class="post-content-input-title" type="text" placeholder="Post title" />
+                <input id="postDescription" class="post-content-input-description" type="text" placeholder="Post description" />
+                <div class="bottom-btns-post">
+                    <a class="post-content-btn hidden">Previous</a>
+                    <a class="post-content-btn" id="text-display-image">Next</a>
+                </div>
+            </div>
+            <div class="post-content hidden" id="image-content">
+                <div class="post-content-image-container">
+                    <input class="post-content-input-file" type="file" id="image" accept="image/*">
+                </div>
+                <div class="bottom-btns-post">
+                    <a class="post-content-btn" id="display-text">Previous</a>
+                    <a class="post-content-btn" id="display-preview">Next</a>
+                </div>
+            </div>
+            <div class="post-content hidden" id="preview-content">
+                <div class="bottom-btns-post">
+                    <a class="post-content-btn" id="preview-display-image">Previous</a>
+                    <a class="post-content-btn" id="submitBtn">Submit</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="create-post-profile-display-section">
+        <div class="profile-display-section-top">
+        </div>
+        <div class="profile-display-section-bottom">
+        </div>
+    </section>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#submitBtn').click(function () {
+            var title = document.getElementById('postTitle').value;
+            var description = document.getElementById('postDescription').value;
+            var imageData = document.getElementById('image').files[0];
+
+            var formData = new FormData();
+            formData.append('Title', title);
+            formData.append('Description', description);
+            formData.append('Image', imageData);
+
+            $.ajax({
+                url: '/posts/create',
+                type: 'POST',
+                processData: false, 
+                contentType: false,
+                data: formData,
+                success: function (data) {
+                    console.log(data);
+                },
+                error: function (error) {
+                    console.log(error);
+                }
+            });
+        });
+    });
+</script>
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var textContent = document.getElementById('text-content');
+        var imageContent = document.getElementById('image-content');
+        var previewContent = document.getElementById('preview-content');
+
+        var btnPost = document.getElementById('btn-post');
+        var btnImage = document.getElementById('btn-image');
+        var btnPreview = document.getElementById('btn-preview');
+        var btnSubmit = document.getElementById('submit');
+
+        var textDisplayImage = document.getElementById('text-display-image');
+        var displayText = document.getElementById('display-text');
+        var displayPreview = document.getElementById('display-preview');
+        var previewDisplayImage = document.getElementById('preview-display-image');
+
+        function showContent(content) {
+            textContent.classList.add('hidden');
+            imageContent.classList.add('hidden');
+            previewContent.classList.add('hidden');
+
+            content.classList.remove('hidden');
+        }
+
+        showContent(textContent);
+
+        btnPost.addEventListener('click', function () {
+            showContent(textContent);
+        });
+
+        btnImage.addEventListener('click', function () {
+            showContent(imageContent);
+        });
+
+        btnPreview.addEventListener('click', function () {
+            showContent(previewContent);
+        });
+
+        textDisplayImage.addEventListener('click', function () {
+            showContent(imageContent);
+        });
+
+        displayText.addEventListener('click', function () {
+            showContent(textContent);
+        });
+
+        displayPreview.addEventListener('click', function () {
+            showContent(previewContent);
+        });
+
+        previewDisplayImage.addEventListener('click', function () {
+            showContent(imageContent);
+        });
+    });
+</script>
