--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
     <link href="~/css/crypto.css" rel="stylesheet" />
     <link href="~/css/feed.css" rel="stylesheet" />
     <link href="~/css/news.css" rel="stylesheet" />
+    <link href="~/css/create-post.css" rel="stylesheet" />
 </head>
 <body>
     <div class="navbar" id="navbar">
@@ -35,7 +36,7 @@
                     </a>
                 </div>
                 <div class="nav-item px-1 hover">
-                    <a class="nav-link fs-6 px-2" asp-action="News" asp-controller="Home">
+                    <a class="nav-link fs-6 px-2" asp-action="News" asp-controller="News">
                         <span class="oi fa-solid fa-newspaper" aria-hidden="true"></span> News
                     </a>
                 </div>
